; ModuleID = '/home/carl/AnghaBench/RetroArch/audio/drivers/extr_tinyalsa.c_pcm_close.c'
source_filename = "/home/carl/AnghaBench/RetroArch/audio/drivers/extr_tinyalsa.c_pcm_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcm = type { i32, i32, i64, i64, i64, i32 }

@bad_pcm = common dso_local global %struct.pcm zeroinitializer, align 8
@PCM_MMAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pcm*)* @pcm_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcm_close(%struct.pcm* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pcm*, align 8
  store %struct.pcm* %0, %struct.pcm** %3, align 8
  %4 = load %struct.pcm*, %struct.pcm** %3, align 8
  %5 = icmp eq %struct.pcm* %4, @bad_pcm
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %49

7:                                                ; preds = %1
  %8 = load %struct.pcm*, %struct.pcm** %3, align 8
  %9 = call i32 @pcm_hw_munmap_status(%struct.pcm* %8)
  %10 = load %struct.pcm*, %struct.pcm** %3, align 8
  %11 = getelementptr inbounds %struct.pcm, %struct.pcm* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* @PCM_MMAP, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %28

16:                                               ; preds = %7
  %17 = load %struct.pcm*, %struct.pcm** %3, align 8
  %18 = call i32 @pcm_stop(%struct.pcm* %17)
  %19 = load %struct.pcm*, %struct.pcm** %3, align 8
  %20 = getelementptr inbounds %struct.pcm, %struct.pcm* %19, i32 0, i32 5
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.pcm*, %struct.pcm** %3, align 8
  %23 = load %struct.pcm*, %struct.pcm** %3, align 8
  %24 = getelementptr inbounds %struct.pcm, %struct.pcm* %23, i32 0, i32 2
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @pcm_frames_to_bytes(%struct.pcm* %22, i64 %25)
  %27 = call i32 @munmap(i32 %21, i32 %26)
  br label %28

28:                                               ; preds = %16, %7
  %29 = load %struct.pcm*, %struct.pcm** %3, align 8
  %30 = getelementptr inbounds %struct.pcm, %struct.pcm* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = icmp sge i32 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %28
  %34 = load %struct.pcm*, %struct.pcm** %3, align 8
  %35 = getelementptr inbounds %struct.pcm, %struct.pcm* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @close(i32 %36)
  br label %38

38:                                               ; preds = %33, %28
  %39 = load %struct.pcm*, %struct.pcm** %3, align 8
  %40 = getelementptr inbounds %struct.pcm, %struct.pcm* %39, i32 0, i32 4
  store i64 0, i64* %40, align 8
  %41 = load %struct.pcm*, %struct.pcm** %3, align 8
  %42 = getelementptr inbounds %struct.pcm, %struct.pcm* %41, i32 0, i32 3
  store i64 0, i64* %42, align 8
  %43 = load %struct.pcm*, %struct.pcm** %3, align 8
  %44 = getelementptr inbounds %struct.pcm, %struct.pcm* %43, i32 0, i32 2
  store i64 0, i64* %44, align 8
  %45 = load %struct.pcm*, %struct.pcm** %3, align 8
  %46 = getelementptr inbounds %struct.pcm, %struct.pcm* %45, i32 0, i32 1
  store i32 -1, i32* %46, align 4
  %47 = load %struct.pcm*, %struct.pcm** %3, align 8
  %48 = call i32 @free(%struct.pcm* %47)
  store i32 0, i32* %2, align 4
  br label %49

49:                                               ; preds = %38, %6
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local i32 @pcm_hw_munmap_status(%struct.pcm*) #1

declare dso_local i32 @pcm_stop(%struct.pcm*) #1

declare dso_local i32 @munmap(i32, i32) #1

declare dso_local i32 @pcm_frames_to_bytes(%struct.pcm*, i64) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @free(%struct.pcm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
